--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 
 # User-specific stuff
 .idea/
-.__pycache__/
+__pycache__/
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
