--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 # User-specific stuff
 .idea/
 .idea/doom-noclip.iml
-.diea/misc.xml
+.idea/misc.xml
 __pycache__/
 .idea/**/workspace.xml
 .idea/**/tasks.xml
